--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "javascript"
   ],
   "author": "Hariom Mishra",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
+  }
 }
